max-depth recursion 수정

--- a/conf.ini
+++ b/conf.ini
@@ -1,4 +1,5 @@
 [dir]
-mp3 = /Users/admire/Music/iTunes/iTunes Media/Music/
+mp3 = /Users/admire/Desktop/ab/
 read = /Users/admire/src/tento-numpy/music_frames/
 out = /Users/admire/src/tento-numpy/out/
+graph = /Users/admire/src/tento-numpy/graph/
